# cmakesample

./: CMakeLists.txt  cmakesample.desktop  main.cpp
rpm/: cmakesample.spec  cmakesample.yaml
